feat: add gh-pages example

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,4 @@
+// You should use them in scss, because we calculate it by sass.
 @import "~/styles/element-variables.scss";
 @import "element-plus/theme-chalk/src/index.scss";
 
