--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,9 +1,3 @@
-// You should use them in scss, because we calculate it by sass.
-@import "~/styles/element-variables.scss";
-@import "element-plus/theme-chalk/src/index.scss";
-
-@debug $--colors;
-
 // :root {
 //   --el-color-primary: red;
 // }
@@ -13,5 +7,12 @@ body {
 }
 
 a {
+  color: var(--el-color-primary);
+}
+
+code {
+  border-radius: 2px;
+  padding: 2px 4px;
+  background-color: var(--el-color-primary-light-9);
   color: var(--el-color-primary);
 }
