--- a/src/styles/element/index.scss
+++ b/src/styles/element/index.scss
@@ -1,6 +1,35 @@
-// You should use them in scss, because we calculate it by sass.
-// comment next line to use default color
-@import "./var.scss";
-@import "element-plus/theme-chalk/src/index.scss";
+$colors: (
+  "primary": (
+    "base": green,
+  ),
+  "success": (
+    "base": #21ba45,
+  ),
+  "warning": (
+    "base": #f2711c,
+  ),
+  "danger": (
+    "base": #db2828,
+  ),
+  "error": (
+    "base": #db2828,
+  ),
+  "info": (
+    "base": #42b8dd,
+  ),
+);
 
-@debug $--colors;
+// You should use them in scss, because we calculate it by sass.
+// comment next lines to use default color
+@forward "element-plus/theme-chalk/src/common/var.scss" with (
+  $colors: $colors,
+
+  $button-padding-horizontal: (
+    "default": 50px
+  )
+);
+
+@use "element-plus/theme-chalk/src/index.scss" as *;
+
+// You can comment it to hide debug info.
+@debug $colors;
