feat: add dark mode

--- a/src/styles/element/index.scss
+++ b/src/styles/element/index.scss
@@ -21,15 +21,17 @@ $--colors: (
 
 // You should use them in scss, because we calculate it by sass.
 // comment next lines to use default color
-@forward "element-plus/theme-chalk/src/common/var.scss" with
-  (
-    // do not use same name, it will override.
-    $colors: $--colors,
-    $button-padding-horizontal: ("default": 50px)
-  );
+@forward "element-plus/theme-chalk/src/common/var.scss" with (
+  // do not use same name, it will override.
+  $colors: $--colors,
+  $button-padding-horizontal: ("default": 50px)
+);
 
 // if you want to import all
 // @use "element-plus/theme-chalk/src/index.scss" as *;
 
 // You can comment it to hide debug info.
 // @debug $--colors;
+
+// import dark theme
+@use "element-plus/theme-chalk/src/dark/css-vars.scss" as *;
