--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,5 @@
 // :root {
-//   --el-color-primary: red;
+//   --ep-color-primary: red;
 // }
 
 body {
@@ -11,12 +11,12 @@ body {
 }
 
 a {
-  color: var(--el-color-primary);
+  color: var(--ep-color-primary);
 }
 
 code {
   border-radius: 2px;
   padding: 2px 4px;
-  background-color: var(--el-color-primary-light-9);
-  color: var(--el-color-primary);
+  background-color: var(--ep-color-primary-light-9);
+  color: var(--ep-color-primary);
 }
