feat: custom dark variables

--- a/src/styles/element/index.scss
+++ b/src/styles/element/index.scss
@@ -38,5 +38,7 @@ $--colors: (
 // You can comment it to hide debug info.
 // @debug $--colors;
 
+// custom dark variables
+@use "./dark.scss";
 // import dark theme
 @use "element-plus/theme-chalk/src/dark/css-vars.scss" as *;
