--- a/src/styles/element/dark.scss
+++ b/src/styles/element/dark.scss
@@ -1,11 +1,11 @@
 // only scss variables
 
 $--colors: (
-  "primary": (
-    "base": #cf5204,
-  ),
+  'primary': (
+    'base': #cf5204
+  )
 );
 
-@forward "element-plus/theme-chalk/src/dark/var.scss" with (
+@forward 'element-plus/theme-chalk/src/dark/var.scss' with (
   $colors: $--colors
 );
