--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,6 +11,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   margin: 0;
+  background-color: var(--ep-color-danger-light-9);
+  overflow: auto;
 }
 
 a {
