--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,9 @@
 // :root {
 //   --ep-color-primary: red;
 // }
+* {
+  box-sizing: border-box;
+}
 
 body {
   font-family: Inter, system-ui, Avenir, "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB",
@@ -11,7 +14,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   margin: 0;
-  background-color: var(--ep-color-danger-light-9);
+  background-color: var(--ep-color-info-light-8);
   overflow: auto;
 }
 
@@ -25,3 +28,7 @@ code {
   background-color: var(--ep-color-primary-light-9);
   color: var(--ep-color-primary);
 }
+
+// .goods-box {
+//   background-color: var(--ep-color-primary-light-9);
+// }
